launchtemplate.tf
resource "aws_launch_template" "prod-lt-pub" {
  name = prod-lt-pub
  instance_type = "t2.micro"
}
